@@ -1,3 +1,15 @@
+2012-12-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCbtree.cc:
+	  BTREE_DEBUG macro for enabling debub messages in blocktree-based allocator.
+
+2012-12-20 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/frexpf.c:
+	  Test for frexpf().
+	* src/z80/gen.c:
+	  Do not attempt to restore pair using dec, when it has been pushed.
+
 2012-12-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCval.c (constVal),
